[build-system]
requires = [
    "setuptools >= 44.1.1",
    "setuptools_scm[toml] >= 4, <6",
    "wheel >= 0.36",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "blur_python_example/version.txt"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov tests/"
testpaths = [
    "tests/",
]
