[metadata]
name = blur-python-example
description = Template python project for blurstudio developed packages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blurstudio/python-example
author = Blur Studio
author_email = opensource@blur.com
license = GNU Lesser General Public License v3 (LGPLv3)
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Source = https://github.com/blurstudio/python-example
    Tracker = https://github.com/blurstudio/python-example/issues

[options]
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    click == 7.1.2

[options.entry_points]
console_scripts =
    echo_message = blur_python_example.cli:echo_message

[options.extras_require]
lint =
    flake8 == 3.9.0
    flake8-bugbear == 21.3.2
    pep8-naming == 0.11.1
format =
    black == 20.8b1
test =
    pytest == 6.2.2
    pytest-cov == 2.11.1

[options.package_data]
* = version.txt

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[flake8]
# B = bugbear
# C = mccabe complexity
# E = pycodestyle errors
# F = flake8 pyflakes
# N = pep8 naming
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, C, E, F, N, W, B9
extend-ignore =
    # whitespace before ':'
    E203,
    # line length, handled by bugbear B950
    E501,
    # bare except, handled by bugbear B001
    E722
max-line-length = 80
exclude =
    .git
    __pycache__
    build
    dist
