[metadata]
name = blur_python_example
version = file: blur_python_example/version.py
description = Template python project for blurstudio developed packages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blurstudio/python-example
author = Blur Studio
author_email = opensource@blur.com
license = LGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platform = any
project_urls =
    Source = https://github.com/blurstudio/python-example
    Tracker = https://github.com/blurstudio/python-example/issues

[options]
packages = find:
install_requires =
    click>=7.1.2
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
setup_requires =
    setuptools
    setuptools_scm[toml]>=4,<6
    wheel

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    echo_message = blur_python_example.cli:echo_message

[options.extras_require]
dev =
    black
    covdefaults
    coverage
    flake8
    flake8-bugbear
    pep8-naming
    pytest
    tox

[bdist_wheel]
universal = 1

[flake8]
select = B, C, E, F, N, W, B9
extend-ignore =
    E203,
    E501,
    E722
max-line-length = 80
exclude =
    *.egg-info
    *.pyc
    .cache
    .eggs
    .git
    .tox
    __pycache__
    build
    dist
